; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_initthread.c_ossl_init_thread.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_initthread.c_ossl_init_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@destructor_key = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@init_thread_destructor = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ossl_init_thread() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @init_thread_destructor, align 4
  %3 = call i32 @CRYPTO_THREAD_init_local(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @destructor_key, i32 0, i32 0), i32 %2)
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %7

6:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %7

7:                                                ; preds = %6, %5
  %8 = load i32, i32* %1, align 4
  ret i32 %8
}

declare dso_local i32 @CRYPTO_THREAD_init_local(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
